...
    Row(
        modifier = modifier.testTag("quantity_controller"),
    ) {
        CountTextButton(
            text = "-",
            onClick = onMinusClick,
            modifier = Modifier.testTag("minus_button"),
        )
        Box(
            contentAlignment = Alignment.Center,
            modifier = Modifier.size(42.dp),
        ) {
            Text(
...
                modifier = Modifier.testTag("quantity_text"),
            )
        }
        CountTextButton(
            text = "+",
            onClick = onPlusClick,
            modifier = Modifier.testTag("plus_button"),
        )
    }
}

@Composable
private fun CountTextButton(
...
