...
    }
}

object DummyProduct {
    val product1 = Product(
        id = 1,
        name = "상품1",
        imageUrl = "https://images.mypetlife.co.kr/content/uploads/2023/03/30102633/AdobeStock_297354202-1024x683.jpeg",
        price = 10_000,
    )

    val product2 = Product(
        id = 2,
...
