...
                    fontSize = 20.sp
                )
                IconButton(
                    onClick = { onDeleteButtonClick(cartItem) },
                    modifier = Modifier
                        .size(24.dp)
                        .testTag("delete_button"),
                ) {
                    Icon(
                        imageVector = Icons.Filled.Close,
                        contentDescription = "Close",
                    )
                }
...
