...
                verticalArrangement = Arrangement.spacedBy(space = 16.dp)
            ) {
                items(items = cartBox) { item ->
                    if (item.count < 1) {
                        return@items
                    }
                    CartItem(
                        item = item,
                        onDeleteItem = {
                            cartBox = CartBox.reset(it)
                        },
                        onClickInc = {
                            CartBox.add(it)
...
                }
            }
            Box(
                modifier = Modifier.fillMaxSize(),
                contentAlignment = Alignment.BottomCenter
            ) {
                BottomText(
                    text = stringResource(id = R.string.order) +
                        "(${stringResource(id = R.string.price_format, totalPrice)})",
                    onClick = {}
                )
            }
        },
...
