...
        )
        Text(
            modifier = Modifier
                .weight(weight = 1f)
                .fillMaxHeight()
                .semantics {
                    contentDescription = "Count"
                },
            text = count.toString(),
            textAlign = TextAlign.Center,
            fontSize = 22.sp
        )
        Image(
...
